--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+    id 'com.google.devtools.ksp' version '1.6.10-1.0.2'
 }
 
 android {
@@ -81,9 +82,9 @@ dependencies {
 //    implementation "androidx.activity:activity-compose:1.6.0-alpha01"
       implementation "com.google.accompanist:accompanist-swiperefresh:0.24.2-alpha"
 
-//    // Compose Nav Destinations
-//    implementation 'io.github.raamcosta.compose-destinations:core:1.1.2-beta'
-//    ksp 'io.github.raamcosta.compose-destinations:ksp:1.1.2-beta'
+    // Compose Nav Destinations
+    implementation 'io.github.raamcosta.compose-destinations:core:1.1.2-beta'
+    ksp 'io.github.raamcosta.compose-destinations:ksp:1.1.2-beta'
 
     // Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
